--- a/example.htm
+++ b/example.htm
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>CodeMirror: Overlay Parser Demo</title>
+    <title>MiniMap Demo with CodeMirror</title>
     <link rel="stylesheet" href="http://codemirror.net/lib/codemirror.css">
     <script src="http://codemirror.net/lib/codemirror.js"></script>
     <script src="http://codemirror.net/lib/util/overlay.js"></script>
@@ -17,7 +17,7 @@
     </style>
   </head>
   <body>
-    <h1>CodeMirror: Overlay Parser Demo</h1>
+    <h1>MiniMap Demo with CodeMirror</h1>
 
     <form><textarea id="code" name="code">
 <html>
