--- a/example.htm
+++ b/example.htm
@@ -77,7 +77,7 @@ CodeMirror.defineMode("mustache", function(config, parserConfig) {
 var editor = CodeMirror.fromTextArea(document.getElementById("code"), 
             {mode: "mustache" });
 
-var miniMapControl = new miniMap({scrollBar: ".CodeMirror-scrollbar",content: ".CodeMirror-lines"});
+var miniMapControl = new miniMap();
 editor.setOption("onChange",function(){ miniMapControl.mirrorContent();});
 
 
