--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="http://codemirror.net/lib/codemirror.js"></script>
     <script src="http://codemirror.net/lib/util/overlay.js"></script>
     <script src="http://codemirror.net/mode/xml/xml.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+   
     <script src="https://raw.github.com/alex-seville/minimap/master/minimap.js"></script>
     <link rel="stylesheet" href="http://codemirror.net/doc/docs.css">
      <style type="text/css">
@@ -90,7 +90,7 @@ CodeMirror.defineMode("mustache", function(config, parserConfig) {
 var editor = CodeMirror.fromTextArea(document.getElementById("code"), 
             {mode: "mustache" });
 
-var miniMapControl = miniMap({scrollBar: ".CodeMirror-scrollbar",content: ".CodeMirror-lines"});
+var miniMapControl = MiniMap();
 editor.setOption("onChange",function(){ miniMapControl();});
 
 
