--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Minimap.js</h1>
+        <h1>MiniMap.js</h1>
         <p>Adding minimap functionality to code-mirror</p>
 
         <p class="view"><a href="https://github.com/alex-seville/minimap">View the Project on GitHub <small>alex-seville/minimap</small></a></p>
@@ -91,7 +91,7 @@ var editor = CodeMirror.fromTextArea(document.getElementById("code"),
             {mode: "mustache" });
 
 var miniMapControl = new MiniMap();
-editor.setOption("onChange",function(){ miniMapControl();});
+editor.setOption("onChange",function(){ miniMapControl.mirrorContent();});
 
 
 </script>
@@ -107,22 +107,27 @@ editor.setOption("onChange",function(){ miniMapControl();});
 
 <p>then create a minimap instance</p>
 
-<p><code>var miniMapControl = miniMap({  
-    scrollBar: ".CodeMirror-scrollbar",  
-    content: ".CodeMirror-lines"});</code>  </p>
+<p><code>var miniMapControl = MiniMap();</code>  </p>
 
-<p>The class names provided (".CodeMirror-scrollbar" and ".CodeMirror-lines") will likely work with most Code Mirror implementations.</p>
+<p>You can optionally pass in the following parameters:</p>
+<ul>
+  <li>scrollBar: The class name of the scroll element, default is ".CodeMirror-scrollbar".</li>
+  <li>content: The actual content to show in the minimap, the default is ".CodeMirror-lines".</li>
+  <li>keepScripts: Whether to keep (but escape) script tags found in the content, or to just remove them entirely</li>
+  <li>miniMapStyles: The css styles for the minimap (must be CSSStyleDeclaration format, camelCase without hyphens)</li>
+  <li>miniMapBarStyles: The css styles for the minimap highlight bar (must be CSSStyleDeclaration format, camelCase without hyphens)</li>
+</ul>
+
 
 <p>To update the minimap when changes occur in the CodeMirror editor simply add this line after the instance is created:</p>
 
 <p><code>editor.setOption("onChange",function(){ 
-    miniMapControl();  
+    miniMapControl.mirrorContent();  
 });</code></p>
 
 <h2>TODO</h2>
-
-<p>I'm sure this could be adapted to non-code mirror fields.<br>
-Code Mirror is not dependent on jQuery, so this plugin shouldn't be either.</p>
+<p>Different code-mirror implementations may use different scrollbar or content selectors.  I haven't tested a variety of situations to make sure it still works.</p>
+<p>I'm sure this could be adapted to non-code mirror text boxes, but for the moment it only works with code-mirror.</p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/alex-seville">alex-seville</a></p>
