Fix missing 'new' in constructor documentation

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ editor.setOption("onChange",function(){ miniMapControl.mirrorContent();});
 
 <p>then create a minimap instance</p>
 
-<p><code>var miniMapControl = MiniMap();</code>  </p>
+<p><code>var miniMapControl = new MiniMap();</code>  </p>
 
 <p>You can optionally pass in the following parameters:</p>
 <ul>
