--- a/index.html
+++ b/index.html
@@ -133,6 +133,19 @@ editor.setOption("onChange",function(){ miniMapControl.mirrorContent();});
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
-    
+    <!-- Start of StatCounter Code for Default Guide -->
+<script type="text/javascript">
+var sc_project=8312356; 
+var sc_invisible=1; 
+var sc_security="664a640d"; 
+</script>
+<script type="text/javascript"
+src="http://www.statcounter.com/counter/counter.js"></script>
+<noscript><div class="statcounter"><a title="drupal
+analytics" href="http://statcounter.com/drupal/"
+target="_blank"><img class="statcounter"
+src="http://c.statcounter.com/8312356/0/664a640d/1/"
+alt="drupal analytics"></a></div></noscript>
+<!-- End of StatCounter Code for Default Guide -->
   </body>
 </html>
