--- a/example.htm
+++ b/example.htm
@@ -5,7 +5,7 @@
     <title>MiniMap Demo with CodeMirror</title>
     <link rel="stylesheet" href="http://codemirror.net/lib/codemirror.css">
     <script src="http://codemirror.net/lib/codemirror.js"></script>
-    <script src="http://codemirror.net/lib/util/overlay.js"></script>
+    <script src="https://raw.github.com/marijnh/CodeMirror/db029a1d669ab63ce0246faea7bc9ec009f92f3f/lib/util/overlay.js"></script>
     <script src="http://codemirror.net/mode/xml/xml.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script src="miniMap.js"></script>
