--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <![endif]-->
     <link rel="stylesheet" href="http://codemirror.net/lib/codemirror.css">
     <script src="http://codemirror.net/lib/codemirror.js"></script>
+    <script src="https://raw.github.com/marijnh/CodeMirror/db029a1d669ab63ce0246faea7bc9ec009f92f3f/lib/util/overlay.js"></script>
     <script src="http://codemirror.net/mode/xml/xml.js"></script>
    
     <script src="https://raw.github.com/alex-seville/minimap/master/minimap.js"></script>
