--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <link rel="stylesheet" href="http://codemirror.net/lib/codemirror.css">
-    <script src="http://codemirror.net/lib/codemirror.js"></script>
+    <script src="https://raw.github.com/marijnh/CodeMirror/db029a1d669ab63ce0246faea7bc9ec009f92f3f/lib/codemirror.js"></script>
     <script src="https://raw.github.com/marijnh/CodeMirror/db029a1d669ab63ce0246faea7bc9ec009f92f3f/lib/util/overlay.js"></script>
     <script src="http://codemirror.net/mode/xml/xml.js"></script>
    
